<!--
    Name: Malcolm Busari
    Student ID: 991523264
    Section No: 1211_34780
-->
<resources>
    <string name="app_name">MalcolmBusari991523264</string>
    <string name="draw">Draw</string>
    <string name="home">Home</string>
    <string name="animation">Animation</string>
    <string name="malcolm_busari_991523264">Malcolm Busari 991523264</string>
    <string name="camera">Camera</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="malcolm">Malcolm</string>
    <string name="busari">Busari</string>
    <string name="clear_canvas">Clear</string>
    <string name="update_canvas">Update</string>
    <string name="prompt">"Are you sure you want to exit this application?"</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="permission_granted">"Camera Permission Granted"</string>
    <string name="permission_denied">"Camera Permission Denied"</string>
    <!-- TODO: Remove or change this placeholder text -->
</resources>