<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#BDDBB0"
    tools:context=".S991523264Fragment">

    <TextView
        android:id="@+id/malcolmFNameTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="119dp"
        android:layout_marginEnd="318dp"
        android:layout_marginBottom="700dp"
        android:rotation="45"
        android:text="@string/malcolm"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/malcolmLNameTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="338dp"
        android:layout_marginTop="119dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="700dp"
        android:rotation="45"
        android:text="@string/busari"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/malcolmStartBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="93dp"
        android:layout_marginTop="651dp"
        android:layout_marginEnd="230dp"
        android:layout_marginBottom="147dp"
        android:text="@string/start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/malcolmStopBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="251dp"
        android:layout_marginTop="651dp"
        android:layout_marginEnd="72dp"
        android:layout_marginBottom="147dp"
        android:text="@string/stop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/malcolmEarthImg"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginStart="105dp"
        android:layout_marginTop="323dp"
        android:layout_marginEnd="106dp"
        android:layout_marginBottom="323dp"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:src="@drawable/earth"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/malcolmMoonImg"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="155dp"
        android:layout_marginTop="216dp"
        android:layout_marginEnd="156dp"
        android:layout_marginBottom="530dp"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:src="@drawable/moon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>